apps/base/servarr/sonarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Sonarr
    gethomepage.dev/group: Media Server
    gethomepage.dev/description: Media Management
    gethomepage.dev/icon: sonarr.png
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "sonarr.southcity.dev"
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
